--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         <title>flex basic</title>
         <meta charset="utf-8">
         <link rel="stylesheet" href="./main.css">
-        <link rel="stylesheet" href="./flex.css">
+        <link rel="stylesheet" href="./style.css">
     </head>
     
     <body>
